# chatbot-uade-bitbosses

./: .gitignore  README.md  chatbot.py  main.py  pyproject.toml
scripts/: retrieve_f1_dataset.sh
src/assistant/: assistant.py
src/assistant/utils/: FilesUtils.py
src/assistant_rag/: assistant.py
src/assistant_rag/embeddings/: embedding_generator.py
src/assistant_rag/pipelines/: etl_pipeline.py
src/assistant_simple/: assistant.py
src/resources/: formula_1_dataset.csv  preguntas_y_respuestas.csv
src/utils/: FilesUtils.py
tests/tests/: chatbot_integration_test.py
