[tool.poetry]
name = "chatbot-uade-bitbosses"
version = "0.1.0"
description = ""
authors = ["Joan Canossa <jfcpersonal@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ollama = "0.4.8"
torch = "2.7.0"
datasets = "3.5.1"
transformers = "4.51.3"
faiss-cpu = "1.11.0"
sentence-transformers = "4.1.0"
numpy = "2.2.5"
pandas = "2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
